--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
                     <!-- Project 2: Recipe Generator using AI -->
                     <div class="project-item">
                         <div class="project-media">
-                            <!-- Video Option - Remove comments to use video -->                            <video autoplay muted loop playsinline class="project-video">
+                            <!-- Video Option - Remove comments to use video -->                            
+                            <video autoplay muted loop playsinline class="project-video">
                                 <source src="assets/videos/recipe-demo.mp4" type="video/mp4">
                                 <img src="assets/images/project2-fallback.jpg" alt="Recipe Generator Fallback" class="video-fallback">
                             </video>
@@ -189,8 +190,9 @@
                     
                     <div class="project-item">
                         <div class="project-media">
-                            <!-- Video Option - Uncomment to use video -->                            <video autoplay muted loop playsinline class="project-video">
-                                <source src="assets/videos/offline-demo.mp4" type="video/mp4">
+                            <!-- Video Option - Uncomment to use video -->                            
+                            <video autoplay muted loop playsinline class="project-video">
+                                <source src="assets/videos/Offline.mp4" type="video/mp4">
                                 <img src="assets/images/project3-fallback.jpg" alt="Offline Detection Fallback" class="video-fallback">
                             </video>
                             
